--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,16 @@
 {
 	"files.associations": {
 		"vector": "cpp",
-		"deque": "cpp"
+		"deque": "cpp",
+		"__bit_reference": "cpp",
+		"initializer_list": "cpp",
+		"iterator": "cpp",
+		"memory": "cpp",
+		"string": "cpp",
+		"string_view": "cpp",
+		"type_traits": "cpp",
+		"utility": "cpp",
+		"__split_buffer": "cpp",
+		"bitset": "cpp"
 	}
 }
